Bug 517692 - Using the copy feature uses UTC time and not the system's Time Zone.
Summary: Using the copy feature uses UTC time and not the system's Time Zone.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: 6.6.2
Platform: Bazzite Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-03-17 12:12 UTC by Djivan V
Modified: 2026-03-30 20:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.4
Sentry Crash Report:


Attachments
Above: Hovering. Below: Following the steps to reproduce the bug. (1.32 MB, image/png)
2026-03-17 12:12 UTC, Djivan V
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Djivan V 2026-03-17 12:12:18 UTC
Created attachment 190731 [details]
Above: Hovering. Below: Following the steps to reproduce the bug.

SUMMARY
Using the copy feature uses UTC time and not the system's Time Zone. 

STEPS TO REPRODUCE
1. Right-click on an instance of the Digital Clock widget 
2. Hover/Click "Copy to Clipboard" 
3. Observe or click one of the options that contain the time 

OBSERVED RESULT
UTC time is displayed and copied to the clipboard. 

EXPECTED RESULT
The system's Time Zone is displayed and copied to the clipboard. 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Bazzite 43
KDE Plasma Version: 6.6.2
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2

ADDITIONAL INFORMATION
Kernel Version: 6.17.7-ba28.fc43.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2026-03-26 09:20:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6438
Comment 2 Nate Graham 2026-03-27 16:19:19 UTC
Git commit d4f16afff4dae14d696f00ffe056a6270f7eb7c8 by Nate Graham, on behalf of David Edmundson.
Committed on 27/03/2026 at 16:19.
Pushed by ngraham into branch 'master'.

applets/digital-clock: Fix clipboard menu

QDateTime objects cannot be easily converted to/from JS date objects.

JS date objects are always relative to the system clock.
In the port to libclock things the behaviour of the passed around
datetime changed in order to make the JS handling considerably easier
and less hacky, unfortunately it broke the menu which made alternative
assumptions.

We don't need to pass a date object about, we just need to pass the
timezone and can then just query the current time.

As a bonus this also allows us to have the value for seconds available
regardless of the Plasmoid setting.
FIXED-IN: 6.6.4

M  +1    -1    applets/digital-clock/DigitalClock.qml
M  +19   -18   applets/digital-clock/plugin/clipboardmenu.cpp
M  +6    -5    applets/digital-clock/plugin/clipboardmenu.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/d4f16afff4dae14d696f00ffe056a6270f7eb7c8
Comment 3 Nate Graham 2026-03-27 17:30:27 UTC
Git commit 664e258c4f1be4c6a2c72c34caba6f1c77d91488 by Nate Graham.
Committed on 27/03/2026 at 16:20.
Pushed by ngraham into branch 'Plasma/6.6'.

applets/digital-clock: Fix clipboard menu

QDateTime objects cannot be easily converted to/from JS date objects.

JS date objects are always relative to the system clock.
In the port to libclock things the behaviour of the passed around
datetime changed in order to make the JS handling considerably easier
and less hacky, unfortunately it broke the menu which made alternative
assumptions.

We don't need to pass a date object about, we just need to pass the
timezone and can then just query the current time.

As a bonus this also allows us to have the value for seconds available
regardless of the Plasmoid setting.
FIXED-IN: 6.6.4


(cherry picked from commit d4f16afff4dae14d696f00ffe056a6270f7eb7c8)

a028c788 applets/digital-clock: Fix cipboard menu

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>

M  +1    -1    applets/digital-clock/DigitalClock.qml
M  +19   -18   applets/digital-clock/plugin/clipboardmenu.cpp
M  +6    -5    applets/digital-clock/plugin/clipboardmenu.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/664e258c4f1be4c6a2c72c34caba6f1c77d91488
Comment 4 Djivan V 2026-03-30 20:15:25 UTC
Thank you so much Mr Graham for taking care of this bug! 

I can see "Version Fixed In: 6.6.4". However, I recently updated my system packages (details below) and I seem to have the fix already on Plasma 6.6.3? Not that I'm complaining, I'm just a little confused. 

SOFTWARE/OS VERSIONS
KDE Plasma Version: 6.6.3
KDE Frameworks Version: 6.24.0
Qt Version: 6.10.2
Kernel Version: 6.17.7-ba29.fc43.x86_64 (64-bit)
Comment 5 Nate Graham 2026-03-30 20:29:21 UTC
David Edmundson gets the credit here; it was his fix! I just merged and backported it.

It's possible your distro backported the fix early.