applets/digital-clock: Fix clipboard menu

QDateTime objects cannot be easily converted to/from JS date objects.

JS date objects are always relative to the system clock.
In the port to libclock things the behaviour of the passed around
datetime changed in order to make the JS handling considerably easier
and less hacky, unfortunately it broke the menu which made alternative
assumptions.

We don't need to pass a date object about, we just need to pass the
timezone and can then just query the current time.

As a bonus this also allows us to have the value for seconds available
regardless of the Plasmoid setting.

BUG: 517692
FIXED-IN: 6.6.4


(cherry picked from commit d4f16afff4dae14d696f00ffe056a6270f7eb7c8)

a028c788 applets/digital-clock: Fix cipboard menu

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>